--- a/editor.html
+++ b/editor.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Les Froggeut</title>
+    <title>Les Froggeut [ EDITOR ]</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href='/editor.html' >editor</a>
+    <a href='/' >game</a>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="/bower_components/phaser-official/build/phaser.js"></script>
      
@@ -19,7 +19,7 @@
     <script src="js/Objects/Tree.js"></script>
     <script src="js/Objects/Rock.js"></script>
 
-
-    <script src="js/game.js"></script>
+    <script src="js/editor/main.js"></script>
 </body>
 </html>
+
