Basic adding items in editor

--- a/editor.html
+++ b/editor.html
@@ -9,7 +9,8 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="/bower_components/phaser-official/build/phaser.js"></script>
      
-    <script src="js/Cell.js"></script>
+    <script src="js/editor/Cell.js"></script>
+
     <script src="js/Map.js"></script>
     <script src="js/World.js"></script>
     <script src="js/Enemy.js"></script>
