--- a/editor.html
+++ b/editor.html
@@ -2,25 +2,24 @@
 <html>
 <head>
     <title>Les Froggeut [ EDITOR ]</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
     <a href='/' >game</a>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="/bower_components/phaser-official/build/phaser.js"></script>
+    <!-- vendors -->
+    <script src='bower_components/underscore/underscore.js'></script>
+    <script src='/bower_components/phaser-official/build/phaser.js'></script>
+    <!-- /vendors -->
+
+    <script src='js/const.js'></script>
      
-    <script src="js/editor/Cell.js"></script>
+    <script src='js/editor/Cursor.js'></script>
+    <script src='js/editor/Cell.js'></script>
+    <script src='js/editor/world.js'></script>
+    <script src='js/Blocks/_.js'></script>
 
-    <script src="js/Map.js"></script>
-    <script src="js/World.js"></script>
-    <script src="js/Enemy.js"></script>
-    <script src="js/Player.js"></script>
-    <script src="js/Tellyport.js"></script>
-    <script src="js/Key.js"></script>
-    <script src="js/Objects/Tree.js"></script>
-    <script src="js/Objects/Rock.js"></script>
 
-    <script src="js/editor/main.js"></script>
+    <script src='js/editor/main.js'></script>
 </body>
 </html>
 
