--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 </head>
 <body>
     <a href='/editor.html' >editor</a>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="/bower_components/phaser-official/build/phaser.js"></script>
+
+    <script data-main='js/main' src='js/lib/require.js' ></script>
      
-    <script src="js/Cell.js"></script>
-    <script src="js/Map.js"></script>
-    <script src="js/World.js"></script>
-    <script src="js/Enemy.js"></script>
-    <script src="js/Player.js"></script>
-    <script src="js/Tellyport.js"></script>
-    <script src="js/Key.js"></script>
-    <script src="js/Objects/Tree.js"></script>
-    <script src="js/Objects/Rock.js"></script>
+    <!-- <script src="js/Cell.js"></script> -->
+    <!-- <script src="js/Map.js"></script> -->
+    <!-- <script src="js/World.js"></script> -->
+    <!-- <script src="js/Enemy.js"></script> -->
+    <!-- <script src="js/Player.js"></script> -->
+    <!-- <script src="js/Tellyport.js"></script> -->
+    <!-- <script src="js/Key.js"></script> -->
+    <!-- <script src="js/Objects/Tree.js"></script> -->
+    <!-- <script src="js/Objects/Rock.js"></script> -->
 
 
-    <script src="js/game.js"></script>
+    <!-- <script src="js/game.js"></script> -->
 </body>
 </html>
