Editor : all blocks available, z-index, basic export/import

--- a/editor.html
+++ b/editor.html
@@ -12,12 +12,16 @@
     <!-- /vendors -->
 
     <script src='js/const.js'></script>
+    <script src='js/common.js'></script>
      
     <script src='js/editor/Cursor.js'></script>
     <script src='js/editor/Cell.js'></script>
     <script src='js/editor/world.js'></script>
     <script src='js/Blocks/_.js'></script>
 
+    <script src='js/Objects/_.js'></script>
+    <script src='js/Objects/Rock.js'></script>
+    <script src='js/Objects/Tree.js'></script>
 
     <script src='js/editor/main.js'></script>
 </body>
