basic export/import to ls, items serialyzation

--- a/editor.html
+++ b/editor.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <a href='/' >game</a>
+    <a href='#' onclick='saveLevel()'>save</a>
+    <a href='#' onclick='loadLevel()'>load</a>
     <!-- vendors -->
     <script src='bower_components/underscore/underscore.js'></script>
     <script src='/bower_components/phaser-official/build/phaser.js'></script>
@@ -17,7 +19,9 @@
     <script src='js/editor/Cursor.js'></script>
     <script src='js/editor/Cell.js'></script>
     <script src='js/editor/world.js'></script>
+
     <script src='js/Blocks/_.js'></script>
+    <script src='js/Blocks/Ramps.js'></script>
 
     <script src='js/Objects/_.js'></script>
     <script src='js/Objects/Rock.js'></script>
