Proper items import/export

--- a/editor.html
+++ b/editor.html
@@ -23,6 +23,10 @@
     <script src='js/Blocks/_.js'></script>
     <script src='js/Blocks/Ramps.js'></script>
 
+    <script src='js/Items/_.js'></script>
+    <script src='js/Items/Key.js'></script>
+    <script src='js/Items/Tellyport.js'></script>
+
     <script src='js/Objects/_.js'></script>
     <script src='js/Objects/Rock.js'></script>
     <script src='js/Objects/Tree.js'></script>
