trying requirejs, moved out world, cell

--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
 <body>
     <a href='/editor.html' >editor</a>
 
-    <script data-main='js/main' src='js/lib/require.js' ></script>
-     
-    <!-- <script src="js/Cell.js"></script> -->
-    <!-- <script src="js/Map.js"></script> -->
-    <!-- <script src="js/World.js"></script> -->
-    <!-- <script src="js/Enemy.js"></script> -->
-    <!-- <script src="js/Player.js"></script> -->
-    <!-- <script src="js/Tellyport.js"></script> -->
-    <!-- <script src="js/Key.js"></script> -->
-    <!-- <script src="js/Objects/Tree.js"></script> -->
-    <!-- <script src="js/Objects/Rock.js"></script> -->
-
-
-    <!-- <script src="js/game.js"></script> -->
+    <script src='app/const.js' ></script>
+    <script data-main='app/game' src='lib/require.js' ></script>
 </body>
 </html>
