--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href='/editor.html' >editor</a>
+    <div class='nav'>
+        <a href='/editor.html' >editor</a>
+    </div>
 
     <script src='app/const.js' ></script>
     <script data-main='app/game' src='lib/require.js' ></script>
