--- a/editor.html
+++ b/editor.html
@@ -10,33 +10,33 @@
         <a href='#' onclick='saveLevel()'>save</a>
         <a href='#' onclick='loadLevel()'>load</a>
     </div>
-    <!-- vendors -->
-    <script src='bower_components/underscore/underscore.js'></script>
-    <script src='/bower_components/phaser-official/build/phaser.js'></script>
-    <!-- /vendors -->
 
-    <script src='js/const.js'></script>
-    <script src='js/common.js'></script>
+    <!-- editor bundle -->
+    <script src='app/const.js'></script>
+
+    <script src='e.b.js'></script>
+
+    <!-- <script src='app/common.js'></script> -->
      
-    <script src='js/editor/Cursor.js'></script>
-    <script src='js/editor/Cell.js'></script>
-    <script src='js/editor/world.js'></script>
+    <!-- <script src='app/editor/Cursor.js'></script> -->
+    <!-- <script src='app/editor/Cell.js'></script> -->
+    <!-- <script src='app/editor/world.js'></script> -->
 
-    <script src='js/Blocks/_.js'></script>
-    <script src='js/Blocks/Ramps.js'></script>
+    <!-- <script src='app/Blocks/_.js'></script> -->
+    <!-- <script src='app/Blocks/Ramps.js'></script> -->
 
-    <script src='js/Items/_.js'></script>
-    <script src='js/Items/Key.js'></script>
-    <script src='js/Items/Tellyport.js'></script>
+    <!-- <script src='app/Items/_.js'></script> -->
+    <!-- <script src='app/Items/Key.js'></script> -->
+    <!-- <script src='app/Items/Tellyport.js'></script> -->
 
-    <script src='js/Objects/_.js'></script>
-    <script src='js/Objects/Rock.js'></script>
-    <script src='js/Objects/Tree.js'></script>
+    <!-- <script src='app/Objects/_.js'></script> -->
+    <!-- <script src='app/Objects/Rock.js'></script> -->
+    <!-- <script src='app/Objects/Tree.js'></script> -->
 
-    <script src='js/Enemy/_.js'></script>
-    <script src='js/Player/_.js'></script>
+    <!-- <script src='app/Enemy/_.js'></script> -->
+    <!-- <script src='app/Player/_.js'></script> -->
 
-    <script src='js/editor/main.js'></script>
+    <!-- <script src='app/editor/main.js'></script> -->
 </body>
 </html>
 
