Two entry points, game-mode on the go

--- a/editor.html
+++ b/editor.html
@@ -11,10 +11,10 @@
         <a href='#' onclick='loadLevel()'>load</a>
     </div>
 
-    <!-- editor bundle -->
     <script src='app/const.js'></script>
 
-    <script src='e.b.js'></script>
+    <!-- editor bundle -->
+    <script src='editor.entry.js'></script>
 </body>
 </html>
 
