--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </div>
 
     <script src='app/const.js' ></script>
-    <script data-main='app/game' src='lib/require.js' ></script>
+
+    <!-- game bundle -->
+    <script src='game.entry.js'></script>
 </body>
 </html>
