updated packages, moved to off phaser

--- a/editor.html
+++ b/editor.html
@@ -14,6 +14,7 @@
     <script src='app/const.js'></script>
 
     <!-- editor bundle -->
+    <script src='./node_modules/phaser/build/phaser.js'></script>
     <script src='editor.entry.js'></script>
 </body>
 </html>
