--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src='app/const.js' ></script>
 
     <!-- game bundle -->
+    <script src='./node_modules/phaser/build/phaser.js'></script>
     <script src='game.entry.js'></script>
 </body>
 </html>
